--- a/app/globals.css
+++ b/app/globals.css
@@ -19,8 +19,8 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@font-face {
+  font-family: 'poppins';
+  src: var(--font-poppins);
+  
 }
